test_programs/compile_failure/invalid_main_sub_lib/src/main/lib.nr
pub fn foo() -> bool {
    true
}
